fix: 불필요한 scrollbar 숨기기

--- a/css/common.css
+++ b/css/common.css
@@ -6,6 +6,7 @@ html {
   width: 100vw;
   height: 100vh;
   font-size: 100%;
+  overflow: auto;
 }
 
 body {
@@ -14,6 +15,14 @@ body {
   font-size: 1rem;
   background-color: #222222;
   color: #fff;
+
+  -ms-overflow-style: none; /* 인터넷 익스플로러 */
+  scrollbar-width: none; /* 파이어폭스 */
+}
+
+/* ( 크롬, 사파리, 오페라, 엣지 ) 동작 */
+body::-webkit-scrollbar {
+  display: none;
 }
 
 a {
